# multi-lang-minimal

./: Dockerfile  README.md  app.py  go.mod  main.go  pyproject.toml  requirements.txt
