[project]
name = "example-project"
version = "0.1.0"
description = "Fixture to test ManifestUpdater.update_toml"

# mixed dependencies: inline tables + plain strings
dependencies = ["urllib3==1.26.19", "1.26.19", "sha256:0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef", "sha256:abcdef0123456789abcdef0123456789abcdef0123456789abcdef0123456789", "requests", "==2.31.0", "idna==3.6"]

[project.optional-dependencies]
test = [
  # NON-TARGET: should not be touched
  "pytest==7.4.0",
]

[tool.poetry.dependencies]
python = "^3.11"
# TARGET (if you want): can update via recs for urllib3
urllib3 = "1.26.15"
# NON-TARGET
tomli = "2.0.1"

[build-system]
requires = ["setuptools==68.0.0", "pip==24.0"]
build-backend = "setuptools.build_meta"

[tool.some_other_tool]
ignore_me = true
