[project]
name = "example-project"
version = "0.1.0"
description = "Fixture to test ManifestUpdater.update_toml"

dependencies = [
  { name = "urllib3", version = "==1.26.19", hashes = [
      "sha256:0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef",
      "sha256:abcdef0123456789abcdef0123456789abcdef0123456789abcdef0123456789",
  ] },
  { name = "requests", version = "==2.31.0" },
  "idna==3.6",
]

[project.optional-dependencies]
test = [
  "pytest==7.4.0",
]

[tool.poetry.dependencies]
python = "^3.11"
urllib3 = "1.26.19"
tomli = "2.0.1"

[build-system]
requires = [
  "setuptools==68.0.0",
  "pip==24.0",
]
build-backend = "setuptools.build_meta"

[tool.some_other_tool]
ignore_me = true