[project]
name = "example-project"
version = "0.1.0"
description = "Fixture to test ManifestUpdater.update_toml"

# mixed dependencies: inline tables + plain strings
dependencies = [
  # TARGET: urllib3 (version + hashes updated)
  # NON-TARGET: requests – no recommendation, must remain unchanged
  { name = "requests", version = "==2.31.0" },

  # NON-TARGET: left as-is
  "idna==3.6",
]

[project.optional-dependencies]
test = [
  # NON-TARGET: should not be touched
  "pytest==7.4.0",
]

[tool.poetry.dependencies]
python = "^3.11"
# NON-TARGET
tomli = "2.0.1"

[build-system]
requires = [
  # TARGET: this is where pip comes from the purl pypi:pip:25.0.1
  "setuptools==68.0.0",
  "pip==24.0",
]
build-backend = "setuptools.build_meta"

[tool.some_other_tool]
ignore_me = true
